--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 <script src = "js/ImageLoading.js"></script>
 <script src = "js/input.js"></script>
 <script src = "js/shots.js"></script>
+<script src = "js/vector.js"></script>
+<script src = "js/bullet.js"></script>
 <script src = "js/satellite.js"></script>
+<script src = "js/enemy.js"></script>
+<script src = "js/asteroids.js"></script>
 <script src = "js/GraphicsCommon.js"></script>
 <script src = "js/main.js"></script>
-
-
-
-
-
 </body>
 </html>
