Audio files added to gameplay

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src = "js/enemy.js"></script>
 <script src = "js/asteroids.js"></script>
 <script src = "js/graphicsCommon.js"></script>
+<script src = "js/soundAndMusic.js"></script>
 <script src = "js/main.js"></script>
 </body>
 </html>
