Collision improved a bit, score powerup image added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script src = "js/graphicsCommon.js"></script>
 <script src = "js/soundAndMusic.js"></script>
 <script src = "js/powerup.js"></script>
+<script src = "js/explosions.js"></script>
 <script src = "js/main.js"></script>
 </body>
 </html>
